fixed spacing -final commit for submission of prj

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 article {
-    padding: 10px 200px;
+    padding: 10px 400px 10px 200px;
 }
 h1 {
     text-align: center;
